--- a/NEWS
+++ b/NEWS
@@ -4,27 +4,72 @@ RELEASE 2.10.0
 
 General
 -------
-New bug fixes in this release since 2.8.0 have NOT been applied to the
+New bug fixes in all releases since 2.8.0 have NOT been applied to the
 1.x.x series.
 
-Some changes post 2011-02-26 in CVS may not be compatible with pre
-Windows 2000 systems.
-
-Use of other than the "C" version of the library is now discouraged.
-That is, the "C++" version fails some tests and does not provide any
-additional functionality.
+Some changes in CVS from 2011-02-26 onward may not be compatible with
+pre Windows 2000 systems.
 
 Testing and verification
 ------------------------
 This version has been tested on SMP architecture (Intel x64 Hex Core)
-by completing the included test suite, stress and bench tests.
+by completing the included test suite, as well as the stress and bench
+tests.
+
+Be sure to run your builds against the test suite. As of this release
+we are successfully passing the full test suite with all build
+configurations. If you see failures then please consider how your
+toolchains might be contributing to the failure. See the README file
+for more detailed descriptions of the toolchains and test systems that
+we have used to get the tests to pass successfully. We recommend
+MinGW64 over MinGW32 for both 64 and 32 bit builds.
 
 New Features
 ------------
-New routine pthread_timedjoin_np added for compatibility with Linux
-and BSD. This routine can also be used to achieve the same
-functionality as pthread_tryjoin_np (from Linux) by using an abstime
-representing any time in the past.
+New routines:
+pthread_timedjoin_np()
+pthread_tryjoin_np()
+ - added for compatibility with Linux.
+sched_getaffinity()
+sched_setaffinity()
+pthread_getaffinity_np()
+pthread_setaffinity_np()
+pthread_attr_getaffinity_np()
+pthread_attr_setaffinity_np()
+ - added for compatibility with Linux and other libgcc-based systems.
+   The macros to manipulate cpu_set_t objects (the cpu affinity mask
+   vector) are also defined: CPU_ZERO, CPU_CLR, CPU_SET, CPU_EQUAL,
+   CPU_AND, CPU_OR, CPU_XOR, CPU_COUNT, CPU_ISSET.
+pthread_getname_np()
+pthread_setname_np()
+pthread_attr_getname_np()
+pthread_attr_setname_np()
+ - added for compatibility with other POSIX implementations. Because
+   some implementations use different *_setname_np() prototypes
+   you can define one of the following macros when building the library:
+     PTW32_COMPATIBILITY_BSD (compatibility with NetBSD, FreeBSD)
+     PTW32_COMPATIBILITY_TRU64
+   If not defined then compatibility is with Linux and other equivalents.
+   We don't impose a strict limit on the length of the thread name for the
+   default compatibility case. Unlike Linux, no default thread name is set.
+   For MSVC builds, the thread name if set is made available for use by the
+   MSVS debugger, i.e. it should be displayed within the debugger to
+   identify the thread in place of/as well as a threadID.
+
+Builds:
+New makefile targets have been added and existing targets modified or
+removed. For example, targets to build and test all of the possible
+configurations of both dll and static libs.
+
+The makefiles now know how to build both 32 and 64 bit versions if
+the toolchain allows it (MinGW only). See the README file "Building
+with ..." sections for details.
+
+Static linking:
+The autostatic functionality has been extended so that builds using
+MSVC8 and later no longer require apps to call
+pthread_win32_thread_detach_np(). That is, all of the DllMain
+functionality is not automatic for static linking for these builds.   
 
 Bug Fixes
 ---------
@@ -32,6 +77,43 @@ Small object file static linking now works. The autostatic.c code is
 required but nothing explicitly references this code so was getting
 optimised out.
 - Daniel Richard G.
+
+sem_getvalue() could return the errno value instead of setting errno
+and returning -1.
+- Ross Johnson
+
+Errno values were being lost if the library is statically linked
+with the runtime library, meaning also that the application used a
+separate runtime instance. This is still the case except a build
+switch has been added that allows more robust error status to be
+incorporated, i.e. allow the return code to be retrieved via
+GetLastError().
+- Daniel Richard G.
+
+Identified the cause of significant failures around cancelation
+and pthread_exit() for the GCE (GNU C++) build configuration as
+coming from Mingw32. Not sure if this is general or just when
+building 32 bit libraries and apps that run on 64 bit systems.
+These failures do not arise with Mingw64 32 bit builds running on
+64 bit systems.
+- Daniel Richard G. and Ross Johnson
+
+pthread_key_delete() bug introduced in release 2.9.x caused this
+routine to fail in a way that the test suite was not detecting. A
+new test has been added to confirm that this routine behaves
+correctly, particularly when keys with destructors are deleted
+before threads exit.
+- Stephane Clairet
+
+pthread_win32_process_attach_np() fix potential failure/security around
+finding and loading of QUSEREX.DLL.
+- Jason Baker
+
+_POSIX_THREAD_ATTR_STACKADDR is now set equal to -1 in pthread.h. As a
+consequence pthread_attr_setstackaddr() now returns ENOSYS. Previously
+the value was stored and could be retrieved but was otherwise unused.
+pthread_attr_getstackaddr() returns ENOSYS correspondingly.
+- Ross Johnson
 
 RELEASE 2.9.1
 -------------
